namespaces.yaml
# namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
