librespeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      imagePullSecrets:
      - name: registrysecret  # Указываем секрет для доступа к приватному реестру
      containers:
      - name: librespeed
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3  # Ваш закрытый образ
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /servers.json
          subPath: servers.json
          name: servers-config
      volumes:
      - name: servers-config
        configMap:
          name: librespeed-servers
